# MiroFlow

./: .env.template  .gitignore  Dockerfile  README.md  README_ja.md  README_zh.md  build_docker.sh  common_benchmark.py  miroflow_service_fastapi.py  pyproject.toml  start.sh
.github/: pull_request_template.md
apps/prepare-benchmark/: .env.template  gen_browsecomp.py  gen_gaia.py  gen_hle.py  main.py  pyproject.toml
apps/run-agent/: .env.template  README.md  calculate_score_from_log.py  common_benchmark.py  eval_answer_from_log.py  eval_utils.py  main.py  pyproject.toml  summary_time_cost.py  trace_single_task.py  util_aggregate_results_xlsx.py  util_statistics_hle_text_only.py
apps/run-agent/.cursor/rules/: agent-framework.mdc  configuration-guide.mdc
apps/run-agent/scripts/claude-sonnet-3.7/: run_evaluate_multiple_runs_gaia-validation.sh
apps/run-agent/scripts/main-worker-dual/: run_evaluate_multiple_runs_browsecomp-zh.sh  run_evaluate_multiple_runs_browsecomp.sh  run_evaluate_multiple_runs_gaia-test.sh  run_evaluate_multiple_runs_gaia-validation.sh  run_evaluate_multiple_runs_hle.sh  run_evaluate_multiple_runs_noansbox_gaia-validation.sh  run_evaluate_multiple_runs_nohintreason_hle.sh  run_evaluate_multiple_runs_xbench-ds.sh
apps/visualize-trace/: app.py  (+3 more)
config/: __init__.py  agent_browsecomp-en_claude37sonnet.yaml  agent_browsecomp-en_mirothinker.yaml  agent_browsecomp-zh_claude37sonnet.yaml  agent_browsecomp-zh_mirothinker.yaml  agent_finsearchcomp.yaml  agent_finsearchcomp_claude37sonnet.yaml  agent_finsearchcomp_mirothinker.yaml  agent_gaia-test.yaml  agent_gaia-validation-gpt5.yaml  agent_gaia-validation-text-only.yaml  agent_gaia-validation-text-only_mirothinker.yaml  agent_gaia-validation-text-only_mirothinker_single_agent.yaml  agent_gaia-validation-text-only_qwen.yaml  agent_gaia-validation.yaml  agent_gaia-validation_claude37sonnet.yaml  agent_gaia-validation_deepseek.yaml  agent_gaia-validation_mirothinker.yaml  agent_hle-text-only_claude37sonnet.yaml  agent_hle_claude37sonnet.yaml  agent_llm_claude37sonnet.yaml  agent_llm_claude37sonnet_anthropic.yaml  agent_llm_deepseek_openrouter.yaml  agent_llm_gpt4o.yaml  agent_llm_gpt5.yaml  agent_llm_mirothinker.yaml  agent_mirothinker.yaml  agent_quickstart_1.yaml  agent_quickstart_reading.yaml  agent_quickstart_search.yaml  agent_quickstart_single.yaml  agent_quickstart_single_agent.yaml  agent_webwalkerqa_claude37sonnet.yaml  agent_webwalkerqa_mirothinker.yaml  agent_xbench-ds.yaml  agent_xbench-ds_claude37sonnet.yaml
docker/: docker-compose.yml
docs/: e2b.Dockerfile  faq.md  hydra_config.md  local_e2b.md  mirothinker.md  workflow.md
libs/miroflow/: pyproject.toml
libs/miroflow-tool/: pyproject.toml
libs/miroflow-tool/src/miroflow/tool/: README.md  manager.py
libs/miroflow-tool/src/miroflow/tool/mcp_servers/: audio_mcp_server.py  python_server.py  reading_mcp_server.py  reasoning_mcp_server.py  searching_mcp_server.py  vision_mcp_server.py
libs/miroflow-tool/src/miroflow/tool/mcp_servers/utils/: smart_request.py
libs/miroflow-tool/tests/: test_reading_mcp_server.py  test_searching_mcp_server.py
libs/miroflow/src/miroflow/llm/: provider_client_base.py
libs/miroflow/src/miroflow/llm/providers/: claude_anthropic_client.py  claude_newapi_client.py  claude_openrouter_client.py  deepseek_newapi_client.py  gpt_openai_client.py  gpt_openai_response_client.py  qwen_sglang_client.py
libs/miroflow/src/miroflow/logging/: task_tracer.py
libs/miroflow/src/miroflow/prebuilt/: orchestrator.py  pipeline.py
libs/miroflow/src/miroflow/prebuilt/config/: config.yaml
libs/miroflow/src/miroflow/prebuilt/config/agent/: claude03_claude_dual.yaml  claude05_claude_dual.yaml  claude07_claude_dual.yaml  deepseek_claude_dual.yaml  deepseek_deepseek_dual.yaml  deepseek_kimi_dual.yaml  deepseek_nohint_claude_dual.yaml  deepseek_nohintreason_claude_dual.yaml  deepseek_qwen3_dual.yaml  deepseek_qwen3flash_dual.yaml  default.yaml  gptoss_gptoss_dual.yaml  kimi_claude_dual.yaml  miroflow.yaml  qwen3_claude_dual.yaml  seed_claude_dual.yaml
libs/miroflow/src/miroflow/prebuilt/config/benchmark/: browsecomp-zh.yaml  browsecomp.yaml  default.yaml  gaia-validation.yaml  hle-text-500.yaml  xbench-ds.yaml
libs/miroflow/src/miroflow/prebuilt/config/llm/: claude-3.7-sonnet_temp03.yaml  claude-3.7-sonnet_temp05.yaml  claude-3.7-sonnet_temp07.yaml  claude-4-sonnet.yaml  claude_openrouter.yaml  deepseek-r1-0528.yaml  deepseek-v3.yaml  default.yaml  gemini-2-5-pro.yaml  gpt-oss-120b.yaml  kimi-k2.yaml  qwen3-235b-thinking.yaml  qwen3-coder-flash.yaml  qwen3-coder.yaml  seed-1-6-thinking.yaml
libs/miroflow/src/miroflow/utils/: io_utils.py  parsing_utils.py  prompt_utils.py  summary_utils.py  tool_utils.py
libs/miroflow/tests/: test_demo.py
scripts/: run_evaluate_multiple_runs_browsecomp.sh  run_evaluate_multiple_runs_finsearchcomp.sh  run_evaluate_multiple_runs_futurex.sh  run_evaluate_multiple_runs_gaia-test.sh  run_evaluate_multiple_runs_gaia-validation.sh  run_evaluate_multiple_runs_mirothinker_gaia-validation-text-only.sh  run_evaluate_multiple_runs_mirothinker_gaia-validation.sh  run_evaluate_multiple_runs_nohintreason_hle.sh  run_evaluate_multiple_runs_nosandbox_gaia-validation.sh  run_evaluate_multiple_runs_xbench-ds.sh  run_evaluate_sinlge_run_xbench-ds.sh  run_prepare_benchmark.sh
utils/: calculate_score_from_log.py  eval_answer_from_log.py  eval_utils.py  extract_futurex_results.py  trace_single_task.py  util_llm_parallel_thinking.py  util_llm_simple_voting.py
(+193 files in other folders)
