[project]
name = "prepare-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # datasets 4.0 remove support for remote code. See:
    # https://huggingface.co/datasets/gaia-benchmark/GAIA/discussions/39
    "datasets<4.0.0",
    "fire>=0.7.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "Pillow",
]

[dependency-groups]
dev = [
    "reuse>=5.0.2",
]
