[project]
name = "miroflow-tool"
version = "0.1.0"
description = "calls tool for agent to use"
readme = "README.md"
authors = [
    { name = "MiroMind Team", email = "miromind@shanda.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.60.0",
    "e2b-code-interpreter>=1.2.1",
    # "e2b==1.2.0b5",
    # "e2b-code-interpreter==1.2.0b5",
    "fastmcp>=2.10.6",
    "google-genai>=1.28.0",
    "markitdown-mcp>=0.0.1a3",
    "mcp>=1.12.2",
    "mutagen>=1.47.0",
    "openai==1.78.1",
    "requests>=2.32.0",
    "rich>=14.1.0",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miroflow"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.7.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "inline-snapshot>=0.23.2",
    "reuse>=5.0.2",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
# see https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
minversion = "8.4.1"
# make warning go away
# https://github.com/pytest-dev/pytest-asyncio/issues/924#issuecomment-2321921915
asyncio_default_fixture_loop_scope = "function"
addopts = [
    # summary for failed AND passed tests
    "-rA",
    # only show stderr for test. stdlog can contain sensitive information
    "--show-capture=stderr",
    # use `pytest-xdist` to run tests in parallel
    "-n=auto",
    # use `pytest-html` to generate test report in html format
    "--html=report.html",
    "--self-contained-html",
    # use `pytest-cov` to generate test coverage report
    "--cov=miroflow.tool",
    "--cov-report=html",
    # strict markers
    "--strict-markers",
    # verbose output
    "-v",
]

env_files = [".env"]

markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_api_key: marks tests that require real API credentials",
]

